--- a/app/src/main/res/layout/history_graph_shimmer.xml
+++ b/app/src/main/res/layout/history_graph_shimmer.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F3F5">
+    android:background="@color/white">
 
 
     <TextView
@@ -21,7 +21,8 @@
         android:layout_height="250dp"
         android:layout_below="@id/shimmerTitle"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="26dp"
+        android:layout_marginHorizontal="15dp"
         android:background="@drawable/bg_shimmer"
         android:orientation="vertical" />
 
