--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,24 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:id="@+id/myContact"
     android:background="?attr/selectableItemBackground"
     android:padding="12dp">
 
-    <ImageView
+
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/contactIcon"
-        android:layout_width="24dp"
-        style="@style/iconTintColor"
-        android:layout_height="24dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/call" />
+        android:scaleType="centerCrop"
+        android:background="@color/gray"
+        app:shapeAppearanceOverlay="@style/CircleImageView" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -37,13 +41,7 @@
             android:visibility="gone"
             android:text="Already Friend"
             style="@style/billWordColor"/>
-        <TextView
-            android:id="@+id/contactNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="+392939239293"
-            style="@style/billWordColor" />
+
     </LinearLayout>
     <ImageView
         android:id="@+id/selected"
