--- a/app/src/main/res/layout/item_selected_contact.xml
+++ b/app/src/main/res/layout/item_selected_contact.xml
@@ -2,56 +2,52 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
+    android:padding="3dp"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="12dp"
         android:layout_marginStart="12dp"
-        app:cardBackgroundColor="#F0F4F8"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="2dp">
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="8dp">
-
-            <TextView
-                android:id="@+id/contactName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Abubaker Uni"
-                android:textColor="#2D3748"
-                android:textSize="14sp"
-                android:fontFamily="sans-serif-medium" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/contactIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@color/gray"
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/CircleImageView" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/closeButton"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_alignEnd="@id/cardView"
         android:layout_alignTop="@id/cardView"
+        android:layout_alignEnd="@id/cardView"
         android:layout_marginTop="-8dp"
         android:layout_marginEnd="-8dp"
         android:background="@drawable/ripple_circle_background"
+        android:clickable="true"
         android:contentDescription="Remove"
         android:elevation="4dp"
+        android:focusable="true"
         android:padding="4dp"
         android:src="@drawable/ic_baseline_close_24" />
 
+    <TextView
+        android:id="@+id/contactName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cardView"
+        android:text="Abubaker Uni"
+        android:layout_centerHorizontal="true"
+        android:maxLength="15"
+        android:ellipsize="end"
+        android:textColor="#2D3748"
+        android:textSize="14sp" />
 </RelativeLayout>
